[package]
name = "rg2d"
version = "0.1.0"
authors = ["Louis Johnson <louis.johnson@biarri.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.10.0"

[dependencies.sdl2]
version = "0.31.0"
features = ["bundled", "static-link"]