[package]
name = "rg2d"
version = "0.1.0"
authors = ["Louis Johnson <louis.johnson@biarri.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.10.0"
owning_ref = "0.4.0"

[dependencies.sdl2]
version = "0.32.2"
features = ["image", "unsafe_textures"]