[package]
name = "rg2d"
version = "0.1.0"
authors = ["Louis Johnson <louisgjohnson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
image = "0.22.3"
nalgebra-glm = "0.5.0"

[dependencies.sdl2]
version = "0.32.2"
features = ["image", "unsafe_textures", "ttf"]

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"